{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 8,
  "lineage": "56bf4d91-8451-1172-89a4-751bb412a799",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.125.51.76",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-19T10:41:18.335-08:00",
            "id": "projects/studious-spider-371813/regions/us-west4/addresses/demo-static-ip-west",
            "name": "demo-static-ip-west",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "studious-spider-371813",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/regions/us-west4/addresses/demo-static-ip-west"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-19T10:41:29.640-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-http",
            "log_config": [],
            "name": "myvpc1-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-19T10:41:29.875-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-https",
            "log_config": [],
            "name": "myvpc1-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-19T10:41:30.114-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-ssh",
            "log_config": [],
            "name": "myvpc1-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/zones/us-west4-a/disks/vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/studious-spider-371813/zones/us-west4-a/instances/vm-1",
            "instance_id": "925649769968447491",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1I3xwDLRnLg=",
            "name": "vm-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.51.76",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/regions/us-west4/subnetworks/mysubnet-1",
                "subnetwork_project": "studious-spider-371813"
              }
            ],
            "project": "studious-spider-371813",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/zones/us-west4-a/instances/vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "zone": "us-west4-a"
          },
          "dependencies": [
            "google_compute_address.vm_static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/studious-spider-371813/global/networks/myvpc1",
            "mtu": 0,
            "name": "myvpc1",
            "project": "studious-spider-371813",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-19T10:41:32.134-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/studious-spider-371813/regions/us-west4/subnetworks/mysubnet-1",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "mysubnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "studious-spider-371813",
            "purpose": "PRIVATE",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/regions/us-west4/subnetworks/mysubnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}